test/scc_test/stmt/semantic-errors/022.t
void test()
{
    for (static int a;;);
}